<resources>
    <string name="app_name">R Six Sports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="logout">Logout</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="add_to_cart">add to cart</string>
    <string name="choose">Choose</string>
    <string name="choose_color">Choose color:</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="promote">Online sport store deliver to your home</string>
    <string name="order_placement">Order Placement</string>
    <string name="use_profile">use profile</string>
    <string name="charge_cod_for_rm_5_00">Charge cod for RM 5.00</string>
    <string name="reset">reset</string>
    <string name="update_profile">Update Profile</string>
    <string name="checkout">checkout</string>
    <string name="delete">delete</string>
    <string name="delivery">Include RM 5.00 for delivery charge</string>
    <string name="nice_your_order_will_be_process_soon">Nice, your order will be process soon</string>
    <string name="history">History</string>
    <string name="call_customer">call customer</string>
    <string name="view">view</string>
    <string name="update_order">update order</string>
    <string name="edit">edit</string>
</resources>