<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_package" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/image"
        android:fontFamily="@font/nunito_sans"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="@tools:sample/lorem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_name"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/text_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>

    <Button
        android:id="@+id/button_call"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_alignParentStart="true"
        android:text="@string/call_customer"
        android:textColor="@color/green_500" />

    <Button
        android:id="@+id/button_view"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_alignParentEnd="true"
        android:text="@string/view"
        android:textColor="@color/blue_500" />
</RelativeLayout>